최종 상세 기능 구현 및 스웨거 완성본
